package com.company;

public class Opel {
}
