@startuml

title __COMPANY's Class Diagram__\n

  package com.company {
    class Audi {
        ~ quattro : boolean
        + Audi()
        + starten()
    }
  }
  

  package com.company {
    class Auto {
        ~ marke : String
        ~ ps : int
        ~ tuerenAnzahl : int
        ~ fahrzeugTyp : String
        + Auto()
        + starten()
    }
  }
  

  package com.company {
    class BMW {
        ~ xDrive : boolean
        + BMW()
        + starten()
    }
  }
  

  package com.company {
    class Hund {
        ~ zaehne : int
        + Hund()
        + bellen()
        + essen()
    }
  }
  

  package com.company {
    class Kuh {
        ~ hufe : int
        + Kuh()
        + essen()
    }
  }
  

  package com.company {
    class Main {
        {static} + main()
    }
  }
  

  package com.company {
    class Mercedes {
    }
  }
  

  package com.company {
    class Opel {
    }
  }
  

  package com.company {
    class Schaf {
        ~ mengeWolle : int
        + rasieren()
    }
  }
  

  package com.company {
    class Tier {
        ~ name : String
        ~ gewicht : int
        ~ groesse : int
        + Tier()
        + essen()
    }
  }
  

  package com.company {
    class VW {
    }
  }
  

  Audi -up-|> Auto
  BMW -up-|> Auto
  Hund -up-|> Tier
  Kuh -up-|> Tier


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
